@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+  <object name="object_buttons">
+    <object name="update_feed_items" meta_type="CMF Action">
+      <property name="title">Update Feed Items</property>
+      <property name="description"/>
+      <property name="url_expr">string:${object_url}/update_feed_items</property>
+      <property name="icon_expr"/>
+      <property name="available_expr">object/@@is_feedcontainer</property>
+      <property name="permissions">
+        <element value="Manage portal"/>
+      </property>
+      <property name="visible">True</property>
+    </object>
+  </object>
+</object>
